--- a/Infrastructure/AkataAcademy.Infrastructure.csproj
+++ b/Infrastructure/AkataAcademy.Infrastructure.csproj
@@ -6,4 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.24" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Application\AkataAcademy.Application.csproj" />
+    <ProjectReference Include="..\Domain\AkataAcademy.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
