Refactor architecture; add async, DI, and error handling
Refactored command/query handlers to use async/await and return
Result<T> for improved error handling and consistency. Introduced
Result and Error classes to standardize error propagation. Added
automatic DI registration for handlers and centralized DI logic
in application and infrastructure layers. Enabled in-memory
database support for testing with EF Core. Improved code
consistency, formatting, and modularity across the solution.

--- a/Presentation/AkataAcademy.Presentation.csproj
+++ b/Presentation/AkataAcademy.Presentation.csproj
@@ -10,4 +10,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Application\AkataAcademy.Application.csproj" />
+    <ProjectReference Include="..\Infrastructure\AkataAcademy.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
