Add unit tests for Course domain and test utilities
Introduced comprehensive unit tests for the Course domain,
including creation, module management, and publishing behavior.
Added utility classes for test data generation and predefined
test elements. Updated solution and project files to reflect
new dependencies and structure. Removed unused placeholder
test class to maintain a clean codebase.

--- a/Tests/UnitTests/AkataAcademy.UnitTests.csproj
+++ b/Tests/UnitTests/AkataAcademy.UnitTests.csproj
@@ -17,6 +17,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Application\AkataAcademy.Application.csproj" />
+    <ProjectReference Include="..\..\Domain\AkataAcademy.Domain.csproj" />
+    <ProjectReference Include="..\..\Infrastructure\AkataAcademy.Infrastructure.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Using Include="Xunit" />
   </ItemGroup>
 
